add mapping through the data on the front end

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -119,7 +119,7 @@ body {
     .content-wrapper {
       width: 100%;
       max-width: 800px; // Adjust as needed
-      text-align: center;
+      //text-align: center;
       
       h1 {
         color: #212529;
@@ -164,7 +164,7 @@ body {
     .content-wrapper {
       width: 100%;
       max-width: 800px; // Adjust as needed
-      text-align: center;
+      //text-align: center;
       
       h1 {
         color: #212529;
