--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -212,7 +212,7 @@ body {
         border: 1px solid $border-color;
         border-left: 4px solid $red-accent; // Red accent
         border-radius: 0.5rem;
-        padding: 1.5rem;
+        padding: 1rem;
         overflow-x: auto;
         margin: 1.5rem 0;
         box-shadow: 
@@ -220,10 +220,10 @@ body {
           0 1px 0 rgba(255, 255, 255, 0.05);
         
         code {
-          color: $hover-blue;
+          color: whitesmoke;
           font-family: 'Courier New', monospace;
-          font-size: 0.95rem;
-          line-height: 1.6;
+          font-size: 1rem;
+          line-height: 1.5;
         }
       }
     }
